Added to README and cleaned up around the site

--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -107,7 +107,7 @@
     .transition(all 0.2s);
   }
 
-  .nav>li.active>a:before,
+  .nav>li>a.on:before,
   .nav>li>a:hover:before {
       opacity: 1;
   }
