--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -3,6 +3,7 @@
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <% if (content == "company") { %>
+	<script>$('#companyNav').addClass('on');</script>
 	<script src="/vendor/customGmaps/js/modernizr.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ81ILn9i65wubHrnCJR2q5iIV6k7b4LA"></script>
 	<script src="/vendor/customGmaps/js/main.js"></script>
@@ -11,7 +12,7 @@
 <script src="/javascripts/main.js"></script>
 <%if (content == "features") { %>
 
-	<!--<script src="/javascripts/features.js"></script>-->
+	<script src="/javascripts/features.js"></script>
 
 <% } else if (content == "blog") { %>
 
