--- a/views/style-guide.ejs
+++ b/views/style-guide.ejs
@@ -97,7 +97,8 @@
             <h5 id="tactful">Tactful Transitions</h5>
             <p>All across the app we use transitions. Hover over any clickable div and see this effect come into play. The rational behind this was to make the user feel more in tune with the app, and have a pleasant feeling navigating around the app. This effect was removed on the table view to speed up the process of inputting values. You can evoke transitions by using the .transition() mixin. Remember to evoke this transition not only when entering the hover (or other) pseudo-element but also when leaving. This is why you might see double transitions in classes</p>
             <h4>Fonts</h4>
-            <p>We use Open Sans as our font. We currently have only font-weights of 300,400,600, &#38; 700. The most common font-size we use across the app is 14px. Headings are all-caps 600/700 and the rest is 400/400.</p>
+            <p>We use Open Sans as our font. We currently have only font-weights of 300,400,600, &#38; 700. The 500 font weight does not exist for Open Sans. The most common font-size we use across the app is 14px. Headings are all-caps 600/700 and the rest is 400.</p>
+            <p>When describing what features do across the app, say in a tooltip or header, we try and avoid techinal words to reduce confusion to the user</p>
             <p>Some examples of the actual font size we use in the app are as follows:</p>
             <ul>
               <li>Dialog box titles - 18pt</li>
