--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -17,6 +17,7 @@
 <% } else if (content == "blog") { %>
 
 	<script src="/javascripts/blog.js"></script>
+	<script src="/javascripts/popups.js"></script>
 
 <% } else if (content == "home") { %>
 
