Fixed double share popup window

--- a/public/stylesheets/blog-post.less
+++ b/public/stylesheets/blog-post.less
@@ -53,6 +53,9 @@
 	.social-shares {
 		text-align: center;
 		font-size: 32px;
+		a {
+			cursor : pointer;
+		}
 	}
 	.footer {
 		border-top  : 1px solid rgba(0,0,0,0.15);
