--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -123,6 +123,7 @@
             position       : relative;
             a {
                 color: @extra-color;
+                cursor : pointer;
                 &:hover {
                     color: darken(@extra-color, 10%);
                 }
