--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -79,8 +79,7 @@
 															<span class="icon-facebook"></span>
 														</a>
 														<a title="Share On Twitter"
-														   onclick="shareWindow(this.href, 'Twitter', '640' , '300')"
-														   href="https://twitter.com/share?url=http://roadmunk.com/blog/<%= blog.url %>&text=<%= blog.title %>"
+														   onclick="shareWindow('https://twitter.com/share?url=http://roadmunk.com/blog/<%= blog.url %>&text=<%= blog.title %>', 'Twitter', '640' , '300')"
 														>
 															<span class="icon-twitter"></span>
 														</a>
