--- a/views/blog/blogEnd.ejs
+++ b/views/blog/blogEnd.ejs
@@ -35,8 +35,8 @@
 											<span class="icon-facebook"></span>
 										</a>
 										<a title="Share On Twitter" onclick="
-											shareWindow(this.href, 'Twitter', '640' , '300')"  href="
-											https://twitter.com/share?url=http://roadmunk.com/blog/<%= url %>&text=<%= title %>">
+											shareWindow('https://twitter.com/share?url=http://roadmunk.com/blog/<%= url %>&text=<%= title %>', 'Twitter', '640' , '300')
+											">
 											<span class="icon-twitter"></span>
 										</a>
 										<a title="Share On Linked In" target="_blank" onclick="
