Updated coloring of sections

--- a/public/stylesheets/colors.less
+++ b/public/stylesheets/colors.less
@@ -50,3 +50,7 @@
 @link-color  : @roadmunk-orange;
 @border-line : 1px solid @steel-border;
 @rankable-hover-background : fadeout(@steel-dark, 95%);
+
+//Section Background Colors
+@primary-bg : @light-font;
+@secondary-bg : #eef1f2;
