--- a/views/company.ejs
+++ b/views/company.ejs
@@ -11,7 +11,7 @@
 		</div>
 	</section>
 	<article>
-		<section class="section white section-short has-top">
+		<section class="section section-short has-top">
 			<div class="decor-top">
 				<% include ./partials/top-triangle-angle %>
 			</div>
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-short has-top">
+		<section class="section section-short has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white section-xs">
+		<section class="section section-xs">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -95,7 +95,7 @@
 				</header>
 			</div>
 		</section>
-		<section class="section white has-top">
+		<section class="section has-top">
 			<section  id="cd-google-map">
 				<div id="google-container"></div>
 				<div id="cd-zoom-in"></div>
