--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,33 +1,33 @@
 <% include start %>
 <div itemscope itemtype="https://schema.org/featureList" class="features-page">
-	<article>
-		<section class="section blue section-features has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container-fluid">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
-				</header>
-				<div class="row">
-					<div class="col-lg-8 center">
-						<div class="col-lg-6 text-center">
-							<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
-							<img class="blend" src="/images/features-timeline.png" itemprop="screenshot" alt="Timeline roadmap view">
-						</div>
-						<div class="col-lg-6 text-center">
-							<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
-							<img class="blend" src="/images/swimlane.png" itemprop="screenshot" alt="Swimlane roadmap view">
-						</div>
+	<section class="section blue section-features has-top">
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container-fluid">
+			<header class="section-header small text-center underline">
+				<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
+			</header>
+			<div class="row">
+				<div class="col-lg-8 center">
+					<div class="col-lg-6 text-center">
+						<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
+						<img class="blend" src="/images/features-timeline.png" itemprop="screenshot" alt="Timeline roadmap view">
 					</div>
-				</div>
-				<div class="row small-margin-top">
-					<div class="col-md-5 center text-center subheader">
-						<h4 class="normal">Create your roadmap in just a few minutes. Using our drag-and-drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
+					<div class="col-lg-6 text-center">
+						<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
+						<img class="blend" src="/images/swimlane.png" itemprop="screenshot" alt="Swimlane roadmap view">
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="section white section-normal has-top">
+			<div class="row small-margin-top">
+				<div class="col-md-5 center text-center subheader">
+					<h4 class="normal">Create your roadmap in just a few minutes. Using our drag-and-drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	<article>
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -141,7 +141,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
