--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@
 		</div>
 	</section>
 	<article>
-		<section class="section white section-short has-top">
+		<section class="section section-short has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section grey section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container-fluid">
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white section-short has-top">
+		<section class="section section-short has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container-fluid features">
@@ -204,7 +204,27 @@
 				</div>
 			</div>
 		</section>
-		<!--<section class="section white section-short has-top">
+		<section class="section section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-medium hairline">Interested in Roadmunk?</h1>
+					<p class="get-smaller">Sign up below to get email updates of all of our new features</p>
+				</header>
+				<div class="row">
+					<div class="col-sm-6 center">
+						<form id="subscribe" action='/lists/57a5de6df8/subscribe/' method='post'>
+							  <input id="email" name="email" type="email" class="form-control input-lg subscribe text-center" placeholder="Enter email address" required>
+							  <button type="submit" class="cta subscribe center"></button>
+						</form>
+						<p id="successMessage" class="text-success text-xsmall text-center xsmall-margin-top"></p>
+						<p id="errorMessage" class="text-warning text-xsmall text-center xsmall-margin-top"></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--<section class="section section-short has-top">
 			<div class="decor-top">
 				<% include ./partials/top-triangle-angle %>
 			</div>
@@ -234,7 +254,7 @@
 				</div>
 			</div>
 		</section>-->
-		<!--<section class="section grey section-normal has-top">
+		<!--<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -291,27 +311,7 @@
 				</blockquote>
 			</div>
 		</section>-->
-		<section class="section grey section-normal has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header text-center underline">
-					<h1 class="headline text-medium hairline">Interested in Roadmunk?</h1>
-					<p class="get-smaller">Sign up below to get email updates of all of our new features</p>
-				</header>
-				<div class="row">
-					<div class="col-sm-6 center">
-						<form id="subscribe" action='/lists/57a5de6df8/subscribe/' method='post'>
-							  <input id="email" name="email" type="email" class="form-control input-lg subscribe text-center" placeholder="Enter email address" required>
-							  <button type="submit" class="cta subscribe center"></button>
-						</form>
-						<p id="successMessage" class="text-success text-xsmall text-center xsmall-margin-top"></p>
-						<p id="errorMessage" class="text-warning text-xsmall text-center xsmall-margin-top"></p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--<section class="section grey section-normal has-top">
+		<!--<section class="section section-normal has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
