--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -1,8 +1,8 @@
 <% include start %>
 <div class="privacy">
+	<% include ./partials/global-header %>
 	<article>
-		<% include ./partials/global-header %>
-		<section class="section white section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="decor-top">
 				<% include ./partials/top-triangle-angle %>
 			</div>
