--- a/views/security.ejs
+++ b/views/security.ejs
@@ -1,8 +1,8 @@
 <% include start %>
 <div class="security">
+	<% include ./partials/global-header %>
 	<article>
-		<% include ./partials/global-header %>
-		<section class="section white section-normal has-top security-content">
+		<section class="section section-normal has-top security-content">
 			<div class="decor-top">
 				<% include ./partials/top-triangle-angle %>
 			</div>
