--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -1,8 +1,8 @@
 <% include start %>
 <div class="pricing">
+	<% include ./partials/global-header %>
 	<article itemscope itemtype="https://schema.org/PaymentChargeSpecification">
-		<% include ./partials/global-header %>
-		<section class="section white section-normal has-top">
+		<section class="section section-normal has-top">
 			<div class="decor-top">
 				<% include ./partials/top-triangle-angle %>
 			</div>
