Fixed Digicert seal on security page

--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -30,7 +30,7 @@
 <% } else if (content == "security") { %> 
 
 	<script type="text/javascript">
-		var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_YEnOGpoW", "10", "l", "black", "YEnOGpoW"]);(function(){var cid=document.createElement("script");cid.async=true;cid.src="//seal.digicert.com/seals/cascade/seal.min.js";var s = document.getElementsByTagName("script");var ls = s[(s.length - 1)];ls.parentNode.insertBefore(cid, ls.nextSibling);}());
+		var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_VvVn_7b9", "10", "l", "black", "VvVn_7b9"]);(function(){var cid=document.createElement("script");cid.async=true;cid.src="//seal.digicert.com/seals/cascade/seal.min.js";var s = document.getElementsByTagName("script");var ls = s[(s.length - 1)];ls.parentNode.insertBefore(cid, ls.nextSibling);}());
 	</script>
 
 <% } else if (content == "style-guide") { %>
