--- a/views/security.ejs
+++ b/views/security.ejs
@@ -26,8 +26,8 @@
 								</ul>
 							</div>
 							<div class="col-md-3 digicert">
-								<div id="DigiCertClickID_YEnOGpoW" data-language="en_US">
-									<a href="https://www.digicert.com/ev-ssl-certification.htm"></a>
+								<div id="DigiCertClickID_VvVn_7b9" data-language="en_US">
+									<a href="http://www.digicert.com/ssl-certificate.htm"></a>
 								</div>
 							</div>
 						</div>
