--- a/views/company.ejs
+++ b/views/company.ejs
@@ -23,7 +23,7 @@
 						<div class="row">
 							<div class="col-md-5">
 								<h3>Why We're Here...</h3>
-								<p>Roadmunk was built out of the founder's frustration to create well-designed roadmaps quickly for stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
+								<p>Roadmunk was built out of the founders' frustration to create well-designed roadmaps quickly for stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
 							</div>
 							<div class="col-md-7 col-md-push-1">
 								<h3>Our Philosophy</h3>
