--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -13,14 +13,14 @@
     li {
         display: inline-block;
         text-transform: uppercase;
-        color: @table-blue;
+        color: @blue;
         font-size : 16px;
         font-weight: 600;
         margin: 0 5px;
         cursor : pointer;
 
         &:hover {
-            color : @table-dark-blue;
+            color : @dark-blue;
         }
 
         &:first-child {
@@ -28,7 +28,7 @@
         }
 
         &.selected {
-            color : @table-dark-blue;
+            color : @dark-blue;
         }
     }
 }
