--- a/public/stylesheets/colors.less
+++ b/public/stylesheets/colors.less
@@ -7,49 +7,38 @@
 /* Colors */
 
 // Orange Palette
-@roadmunk-orange : #F39C12; //Off Orange
-@light-orange    : #FCC32A;
-@dark-orange     : #E59825; // given on an active, in the case of the links on the table view, this is the hover color
+@roadmunk-orange : #F49B78; //Off Orange
+@light-orange    : #F3BF81;
+@dark-orange     : #F1706D; // given on an active, in the case of the links on the table view, this is the hover color
 
 // Other Palette
-@table-blue        : #0DAAD1;
-@table-dark-blue   : #1A86A0;
-@error-red         : #FF4840;
-@admin-green       : #6BC37E;
-@dialog-bg         : #EEEEEE;
+@blue        : #018B8D;
+@dark-blue   : #047C8C;
+@error-red         : #F11915;
+@admin-green       : #188D10;
+@dialog-bg         : #EDE5E4;
 //-@global-background : url('/assets/img/global-bg.png');
-//-@global-background-triangle-right : url('/assets/img/global-bg-triangle-right.png');
-//-@global-background-triangle-left : url('/assets/img/global-bg-triangle-left.png');
 
 // Steel Color Palette
-@steel-darkest  : #2F3134;
-@steel-darker   : #3B3E41;
-@steel-dark     : #4A525A;
-@steel-normal   : #60666B;
-@steel-icon     : #9CA0A4;
-@steel-light    : #A5A5AF;
-@steel-line     : #C8CED0;
-@steel-warm     : #C3C3C9;
-@steel-lighter  : #C5C5CB;
-@steel-lightest : #E2E2E6;
+@steel-darkest  : #212020;
+@steel-darker   : #333131;
+@steel-dark     : #403D3D;
+@steel-normal   : #545151;
+@steel-icon     : #706C6C;
+@steel-light    : #8F8A89;
+@steel-line     : #9E9898;
+@steel-warm     : #ABA5A4;
+@steel-lighter  : #BFB8B8;
+@steel-lightest : #D4CCCB;
 
 // Font Colors
 @light-font : #FFFFFF;
-@dark-font  : #3B3E41;
+@dark-font  : #212020;
 
 @steel-background-highlight : @roadmunk-orange;
 @steel-foreground-highlight : @light-font;
 @steel-border               : @steel-lightest;
 @steel-box-shadow           : @dark-font;
-
-// Seperator Colors
-@light-seperator : #9A9C9D;
-@dark-seperator  : @steel-dark;
-
-// Highlight colours
-@link-color  : @roadmunk-orange;
-@border-line : 1px solid @steel-border;
-@rankable-hover-background : fadeout(@steel-dark, 95%);
 
 //Section Background Colors
 @primary-bg : @light-font;
