--- a/public/stylesheets/footer.less
+++ b/public/stylesheets/footer.less
@@ -9,7 +9,7 @@
 @rwd-links-font-size : 10px;
 @rwd-copyright-font-size : @rwd-links-font-size;
 
-@bg-color: @table-blue;
+@bg-color: @blue;
 @text-color: @light-font;
 @header-text-color : @dialog-bg;
 @border-color : @dialog-bg;
