--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -143,9 +143,9 @@ a {
     &.subscribe{
         width      : 150px;
         padding: 9px 0;
-        background : @table-blue;
+        background : @blue;
         &:hover {
-            background : darken(@table-blue, 10%);
+            background : darken(@blue, 10%);
         }
         &:before {
             content : "Subscribe";
@@ -231,7 +231,7 @@ a {
 
 .btn-primary {
     @hex-hover-color  : @roadmunk-orange;
-    @button-color     : @table-blue;
+    @button-color     : @blue;
     
     background-color : @button-color;
     border-color     : @hex-hover-color;
@@ -514,7 +514,7 @@ a {
   }
 
   &.blue {
-    .section-fill(@table-blue, @light-font);
+    .section-fill(@blue, @light-font);
   }
 
   &.grey {
