--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -1,6 +1,6 @@
 /* Top Bar Styling */
 @scroll-transition : 0.5s;
-@bg-color          : @table-blue;
+@bg-color          : @blue;
 @text-color        : @light-font;
 
 
