--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -132,7 +132,7 @@
             background: @roadmunk-orange;
           }
           &.release {
-            background: @table-blue;
+            background: @blue;
           }
         }
 
