--- a/public/stylesheets/pricing-table.less
+++ b/public/stylesheets/pricing-table.less
@@ -65,9 +65,9 @@
 			}
 		}
 		&.right {
-			color : @table-blue;
+			color : @blue;
 			&:hover {
-				color: @table-blue;
+				color: @blue;
 			}
 		}
 	}
@@ -95,7 +95,7 @@
 		}
 
 		&.right {
-			background-color : @table-blue;
+			background-color : @blue;
 			.switch {
 				left : 43px;
 			}
@@ -249,18 +249,18 @@
 				font-weight      : 600;
 				font-size        : 16px;
 				text-align       : center;
-				background-color : @table-blue;
+				background-color : @blue;
 				.border-radius(4px);
 
 				&:hover {
-					background-color : @table-dark-blue;
+					background-color : @dark-blue;
 					cursor           : pointer;
 				}
 
 				&.starter {
 					background-color: @starter-color;
 					&:hover {
-						background-color : @table-dark-blue;
+						background-color : @dark-blue;
 						cursor           : pointer;
 					}
 				}
@@ -268,7 +268,7 @@
 				&.business {
 					background-color: @business-color;
 					&:hover {
-						background-color : @table-dark-blue;
+						background-color : @dark-blue;
 						cursor           : pointer;
 					}
 				}
@@ -276,7 +276,7 @@
 				&.professional {
 					background-color: @professional-color;
 					&:hover {
-						background-color : @table-blue;
+						background-color : @blue;
 						cursor           : pointer;
 					}
 				}
@@ -284,7 +284,7 @@
 				&.enterprise {
 					background-color: @enterprise-color;
 					&:hover {
-						background-color : @table-blue;
+						background-color : @blue;
 						cursor           : pointer;
 					}
 				}
