--- a/public/stylesheets/style-guide.less
+++ b/public/stylesheets/style-guide.less
@@ -338,11 +338,11 @@ section {
 }
 
 .blue {
-	background-color: @table-blue !important;
+	background-color: @blue !important;
 }
 
 .dark_blue {
-	background-color: @table-dark-blue !important;
+	background-color: @dark-blue !important;
 }
 
 .orange {
