--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,16 @@
 <% include start %>
 <div class="home">
 	<section class="section blue section-xlarge">
-		<div class="background-media"></div>
+		<div class="background-media">
+			<!--<img src="/images/home-banner.png" class="bg blur">-->
+		</div>
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<header class="section-header home landing-text underline underline-left underline-landing">
-						<h1 class="headline text-large hairline landing-text">Create Beautiful Roadmaps Quickly</h1>
-						<p class="get-smaller">Start building insightful visualizations for your audience.</p>
+						<h1 class="headline text-large hairline landing-text">Brent Scheibelhut</h1>
+						<p class="get-smaller">Developer. Designer. Athlete. Writer.<br> Freelancing At Its Finest.</p>
 					</header>
 				</div>
 				<div class="col-lg-6 text-center"> <!-- animated fadeInRight -->
@@ -209,8 +211,8 @@
 			<div class="background-overlay"></div>
 			<div class="container">
 				<header class="section-header text-center underline">
-					<h1 class="headline text-medium hairline">Interested in Roadmunk?</h1>
-					<p class="get-smaller">Sign up below to get email updates of all of our new features</p>
+					<h1 class="headline text-medium hairline">Interested in Brent's Projects?</h1>
+					<p class="get-smaller">Sign up below to get email updates of all his new releases</p>
 				</header>
 				<div class="row">
 					<div class="col-sm-6 center">
@@ -222,6 +224,66 @@
 						<p id="errorMessage" class="text-warning text-xsmall text-center xsmall-margin-top"></p>
 					</div>
 				</div>
+			</div>
+		</section>
+		<section class="section section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-large xsmall-margin-bottom hairline">Testimonials</h1>
+				</header>
+				<blockquote id="testimonial1" class="fancy-blockquote  transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/man-1.png">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-10">
+							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+							<small>Latif Nanji,</small>
+							<small>Co-Founder of Roadmunk</small>
+						</div>
+					</div>
+				</blockquote>
+				<blockquote id="testimonial2" class="fancy-blockquote transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-10">
+							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+							<small class="text-right">Sam Mednick,</small>
+							<small class="text-right">Founder of Blueprint Coaching</small>
+						</div>
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/woman-1.png">
+								</div>
+							</div>
+						</div>
+					</div>
+				</blockquote>
+				<blockquote id="testimonial3" class="fancy-blockquote transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/man-2.png">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-10">
+							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+							<small>David Austin,</small>
+							<small>Director of Online Marketing, Salesforce</small>
+						</div>
+					</div>
+				</blockquote>
 			</div>
 		</section>
 		<!--<section class="section section-short has-top">
@@ -252,63 +314,6 @@
 						</ul>
 					</div>
 				</div>
-			</div>
-		</section>-->
-		<!--<section class="section section-normal has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header text-center underline">
-					<h1 class="headline text-large xsmall-margin-bottom hairline">Clients Said</h1>
-				</header>
-				<blockquote id="testimonial1" class="fancy-blockquote  transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/man-1.png">
-								</div>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small>Sue Doe</small>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote id="testimonial2" class="fancy-blockquote transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small>Sue Doe</small>
-						</div>
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/woman-1.png">
-								</div>
-							</div>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote id="testimonial3" class="fancy-blockquote transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/man-2.png">
-								</div>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small>Sue Doe</small>
-						</div>
-					</div>
-				</blockquote>
 			</div>
 		</section>-->
 		<!--<section class="section section-normal has-top">
