--- a/views/partials/stylesheets.ejs
+++ b/views/partials/stylesheets.ejs
@@ -1,7 +1,7 @@
 <!-- Stylesheets -->
 <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
 <link rel='stylesheet' href='/stylesheets/fonts.css' />
-<!--<link rel='stylesheet' href='/stylesheets/animate.css' />--> <!-- Currently not using -->
+<link rel='stylesheet' href='/stylesheets/animate.css' />
 <link rel='stylesheet' href='/stylesheets/style.css' />
 
 <!-- Custom GMaps Styling -->
