--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,20 +18,9 @@
         <li><a id="featuresNav" title="Features" href="/features">Features</a></li>
         <!--<li><a title="Pricing" href="/pricing">Pricing</a></li>-->
         <li><a id="blogNav" title="Blog" href="/blog">Blog</a></li>
-        <li><a id="companyNav" title="Company" href="/company">Company</a></li>
+        <li><a id="companyNav" title="Company" href="/company">Contact</a></li>
          <li><a title="Company" href="https://app.roadmunk.com/login/#/signup">Sign Up</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-
-  <div class="small-header-links">
-    <span class="help">
-      <a title="Help" href="https://roadmunk.zendesk.com/hc/en-us">Help</a>
-    </span>
-    <a title="Login" href="https://app.roadmunk.com/login/#/">
-      <span class="login">
-        Login
-      </span>
-    </a>
-  </div>
 </nav>
