--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -62,7 +62,7 @@
   }
 
   .navbar-collapse {
-    border-color: lighten(@dialog-bg, 0.5%);
+    border-color: lighten(@grey, 0.5%);
   }
 
   .navbar-toggle {
@@ -221,7 +221,7 @@
 
 .dropdown-menu {
   .divider {
-    background-color: @dialog-bg;
+    background-color: @grey;
   }
 }
 
