--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -38,7 +38,7 @@
   .download {
     font-size: 60px;
     opacity: 0.8;
-    color: @admin-green;
+    color: @green;
   }*/
 
   input.subscribe {
@@ -126,10 +126,10 @@
             margin    : 12px 1px 0 0;
           }
           &.sprint {
-            background: @admin-green;
+            background: @green;
           }
           &.project {
-            background: @roadmunk-orange;
+            background: @orange;
           }
           &.release {
             background: @blue;
