--- a/public/stylesheets/pricing-table.less
+++ b/public/stylesheets/pricing-table.less
@@ -52,9 +52,9 @@
 			}
 		}
 		&.write {
-			color : @admin-green;
+			color : @green;
 			&:hover {
-				color: @admin-green;
+				color: @green;
 			}
 		}
 		&.grey {
@@ -74,7 +74,7 @@
 
 	.switch-pill {
 		float            : left;
-		background-color : @admin-green;
+		background-color : @green;
 		cursor 			 : pointer;
 		position         : relative;
 		margin           : 0 13px;
@@ -119,12 +119,12 @@
 	color        : @steel-dark;
 
 	.pricing-checkmark {
-		color : @admin-green;
+		color : @green;
 	}
 
 	//I don't think you need the x's b/c of the zebra stripes but they're here for now
 	.pricing-x {
-		color : lighten(@error-red, 5%);
+		color : lighten(@red, 5%);
 	}
 
 
@@ -233,7 +233,7 @@
 		width       : @cell-width;
 		padding     : @padding 0px;
 		font-weight : 400;
-		background  : @dialog-bg;
+		background  : @grey;
 		border      : 1px solid @steel-line;
 
 		&.button-row {
