--- a/public/stylesheets/style-guide.less
+++ b/public/stylesheets/style-guide.less
@@ -303,7 +303,7 @@ section {
 /* ------------- */
 
 .red {
-	background-color: @error-red !important;
+	background-color: @red !important;
 }
 
 .global_bg {
@@ -313,7 +313,7 @@ section {
 }
 
 .green {
-	background-color: @admin-green !important;
+	background-color: @green !important;
 }
 
 .white {
@@ -322,7 +322,7 @@ section {
 }
 
 .off_white {
-	background-color : @dialog-bg !important;
+	background-color : @grey !important;
 	border           : 1px solid @steel-lightest !important;
 	color            : #000 !important;
 }
@@ -346,7 +346,7 @@ section {
 }
 
 .orange {
-	background-color: @roadmunk-orange !important;
+	background-color: @orange !important;
 }
 
 .dark_orange {
