--- a/public/stylesheets/blog-post.less
+++ b/public/stylesheets/blog-post.less
@@ -44,7 +44,7 @@
 		    }
    		}
    		a {
-   			color: @roadmunk-orange;
+   			color: @orange;
    			&:hover {
    				color: @dark-orange;
    			}
