--- a/public/stylesheets/colors.less
+++ b/public/stylesheets/colors.less
@@ -6,17 +6,37 @@
 
 /* Colors */
 
-// Orange Palette
-@roadmunk-orange : #F49B78; //Off Orange
-@light-orange    : #F3BF81;
-@dark-orange     : #F1706D; // given on an active, in the case of the links on the table view, this is the hover color
+//Shade Palette
+@white       : #FFFFFF;
+@grey        : #EDE5E4;
+@light-grey  : #EEF1F2;
+@heavy-grey  : #ECF0F1;
+@grey-h-text : #89867E;
+@grey-b-text : #CCCBC7;
 
-// Other Palette
-@blue        : #018B8D;
-@dark-blue   : #047C8C;
-@error-red         : #F11915;
-@admin-green       : #188D10;
-@dialog-bg         : #EDE5E4;
+// Color Palette
+@blue            : #4593E3;
+@secondary-blue  : #0E83CD;
+@third-blue      : #5CBCF6;
+@third-dark-blue : #49A7DF;
+@dark-blue       : #226FBE;
+@darker-blue     : #174D85;
+@red             : #F06060;
+@dark-red        : #CB4E4E;
+@darker-red      : #AB3C3C;
+@green           : #2AC56C;
+@secondary-green : #2ECC71;
+@dark-green      : #17AA56;
+@darker-green    : #119E4D;
+@purple          : #9E54BD;
+@dark-purple     : #823AA0;
+@yellow          : #FCD04B;
+@dark-yellow     : #FCAD26;
+@darker-yellow   : #F29E0D;
+@orange          : #F49B78;
+@light-orange    : #F3BF81;
+@dark-orange     : #F1706D;
+
 //-@global-background : url('/assets/img/global-bg.png');
 
 // Steel Color Palette
@@ -32,14 +52,9 @@
 @steel-lightest : #D4CCCB;
 
 // Font Colors
-@light-font : #FFFFFF;
-@dark-font  : #212020;
-
-@steel-background-highlight : @roadmunk-orange;
-@steel-foreground-highlight : @light-font;
-@steel-border               : @steel-lightest;
-@steel-box-shadow           : @dark-font;
+@light-font : @white;
+@dark-font  : @steel-darkest;
 
 //Section Background Colors
-@primary-bg : @light-font;
-@secondary-bg : #eef1f2;
+@primary-bg   : @white;
+@secondary-bg : @light-grey;
