--- a/public/stylesheets/footer.less
+++ b/public/stylesheets/footer.less
@@ -11,8 +11,8 @@
 
 @bg-color: @blue;
 @text-color: @light-font;
-@header-text-color : @dialog-bg;
-@border-color : @dialog-bg;
+@header-text-color : @grey;
+@border-color : @grey;
 
 .footer {
   width      : 100%;
