--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -63,7 +63,7 @@ p {
 
 a {
     text-decoration : none;
-    color           : @roadmunk-orange;
+    color           : @orange;
     .transition(color 0.2s);
     &:hover {
         text-decoration : none;
@@ -73,7 +73,7 @@ a {
     &.go-top {
         color: #fff;
         &:hover {
-            color: @dialog-bg;
+            color: @grey;
         }
     }
 }
@@ -105,7 +105,7 @@ a {
     //Use width instead of left/right padding so we can center the button easily with margin auto
     width         : 325px;
     padding       : 15px 0;
-    background    : @roadmunk-orange;
+    background    : @orange;
     color         : #fff;
     font-size     : 18px;
     border-radius : 4px;
@@ -113,7 +113,7 @@ a {
     text-align    : center;
     .transition(color 0.2s, background 0.2s;);
     &:hover {
-        color      : @dialog-bg;
+        color      : @grey;
         background : @dark-orange;
         .transition(color 0.2s, background 0.2s;);
     }
@@ -122,9 +122,9 @@ a {
     }
     &.learn-more {
         width      : 250px;
-        background : @admin-green;
+        background : @green;
         &:hover {
-            background : darken(@admin-green, 10%);
+            background : darken(@green, 10%);
         }
         &:before {
             content : "Learn More";
@@ -132,9 +132,9 @@ a {
     }
     &.free-trial {
         width: 275px;
-        background : @admin-green;
+        background : @green;
         &:hover {
-            background : darken(@admin-green, 10%);
+            background : darken(@green, 10%);
         }
         &:before {
             content : "Start 14 Day Free Trial";
@@ -230,7 +230,7 @@ a {
 }
 
 .btn-primary {
-    @hex-hover-color  : @roadmunk-orange;
+    @hex-hover-color  : @orange;
     @button-color     : @blue;
     
     background-color : @button-color;
@@ -317,7 +317,7 @@ a {
     font-size  : 16px;
     width      : 2em;
     height     : 2em;
-    background : @roadmunk-orange;
+    background : @orange;
     text-align : center;
     bottom     : -44px;
     opacity    : 1;
@@ -364,7 +364,7 @@ a {
 
 //Small Hex
 .hex-alt {
-    .hex(10px, 18px, 21px, 36px, @roadmunk-orange);
+    .hex(10px, 18px, 21px, 36px, @orange);
 }
 
 //Large Hex
