--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a title="E.T. Go Home" class="navbar-brand" href="/">
-        <img src="/images/logo_white_beta.png" height="35px">
+        <img src="/images/logo_white.png" height="35px">
       </a>
     </div>
 
